# GUTILS

./: .dockerignore  .doctr-files  .gitignore  .pre-commit-config.yaml  .travis.yml  Dockerfile  LICENSE  README.md  development.html  environment.yml  genindex.html  index.html  modd.conf  objects.inv  pip-requirements.txt  py-modindex.html  pytest.ini  release.sh  requirements-dev.txt  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  usage.html  watches.html
.github/: dependabot.yml
.github/workflows/: default-tests.yml  publish.yml  push.yml  release.yml
_sources/api/: gutils.rst.txt  gutils.templates.rst.txt
api/: gutils.html  gutils.slocum.html  gutils.templates.html  gutils.watch.html  modules.html
conda-recipe/: meta.yaml
docker/init/: 01_set_services.sh
docs/: conf.py  development.rst  index.rst
docs/notebooks/: 0001 - Converting Slocum data to a standard DataFrame.ipynb  0002 - Analyzing the standard DataFrames.ipynb  0003 - Creating netCDF files from a standard DataFrame.ipynb  0004 - Analyzing a Full Deployment NetCDF.ipynb  Check Profile Assignment.ipynb  Convert Folder of Binary.ipynb
example/: README.md  docker-compose.yml
gutils/: __init__.py  ctd.py  filters.py  nc.py  yo.py
gutils/slocum/: __init__.py
gutils/slocum/echotools/: catalogTbd.py  decodePseudogram.py  processEchograms.py  processTbd.py  teledyne.py
gutils/templates/: erddap_deployment.xml  ioos_ngdac.json  slocum_dac.json  trajectory.json
gutils/tests/: requirements.txt  test_nc.py  test_real.py  test_slocum.py  test_utils.py  test_watch.py
gutils/tests/resources/erddap/: datasets.xml
gutils/tests/resources/slocum/bass-full-test/rt/: binary
gutils/tests/resources/slocum/bass-test-filters-override/: config
gutils/tests/resources/slocum/bass-test-watch/: config
gutils/tests/resources/slocum/binary/modena-20150625T0000/: modena-2015-174-10-0.ebd  modena-2015-174-10-1.ebd  modena-2015-174-10-2.dbd  modena-2015-174-10-3.dbd  modena-2015-174-10-3.ebd  modena-2015-174-10-4.ebd  modena-2015-174-10-5.ebd  modena-2015-174-3-0.ebd  modena-2015-174-4-0.dbd  modena-2015-174-4-0.ebd  modena-2015-174-5-0.dbd  modena-2015-174-5-0.ebd  modena-2015-174-6-0.dbd  modena-2015-174-6-0.ebd  modena-2015-174-7-1.ebd  modena-2015-174-7-3.dbd  modena-2015-174-8-0.ebd  modena-2015-174-9-0.dbd  modena-2015-174-9-0.ebd  modena-2015-175-0-11.dbd  modena-2015-175-0-12.dbd  modena-2015-175-0-13.dbd  modena-2015-175-0-14.dbd  modena-2015-175-0-14.ebd  modena-2015-175-0-16.ebd  modena-2015-175-0-21.dbd  modena-2015-175-0-22.dbd  modena-2015-175-0-22.ebd  modena-2015-175-0-24.dbd  modena-2015-175-0-24.ebd  modena-2015-175-0-25.dbd  modena-2015-175-0-25.ebd  modena-2015-175-0-26.ebd  modena-2015-175-0-27.dbd  modena-2015-175-0-28.ebd  modena-2015-176-1-0.dbd  modena-2015-176-1-1.dbd  modena-2015-176-1-1.ebd  modena-2015-176-1-10.dbd  modena-2015-176-1-11.ebd  (+285 more)
gutils/tests/resources/slocum/config/bass-20160909T1733/: deployment.json
gutils/tests/resources/slocum/config/bass-filters-in-config/: deployment.json
gutils/tests/resources/slocum/config/sam-20190909T0000/: 8efb9d0a.cac
gutils/tests/resources/slocum/echometrics/config/: deployment.json
gutils/tests/resources/slocum/echometrics/rt/binary/: unit_507-2022-019-2-0.sbd  unit_507-2022-019-2-0.tbd
gutils/tests/resources/slocum/echometrics2/config/: 16708f40.cac  450e4d91.cac  79884a79.cac  d0f88888.cac  deployment.json  slocum_dac.json
gutils/tests/resources/slocum/echometrics3/config/: deployment.json  instruments.json  uaf-gretel-2022-019-8-0.tbd
gutils/tests/resources/slocum/echometrics4/config/: deployment.json
gutils/tests/resources/slocum/echometrics5/config/: deployment.json
gutils/tests/resources/slocum/echometrics6/config/: deployment.json  instruments.json
gutils/tests/resources/slocum/echometrics6/rt/: binary
gutils/tests/resources/slocum/echometrics7/config/: deployment.json
gutils/tests/resources/slocum/echometrics8/delayed/: binary
gutils/tests/resources/slocum/ecometrics/config/: deployment.json
gutils/tests/resources/slocum/ecometrics2/config/: 28b7e1b2.cac  8e39afd8.cac  deployment.json
gutils/tests/resources/slocum/ecometrics3/config/: deployment.json  usf-stella-2021-209-5-16.tbd
gutils/tests/resources/slocum/ecometrics4/config/: deployment.json
gutils/tests/resources/slocum/modena-test-ascii/: config
gutils/tests/resources/slocum/sam-20190909T0000/: config
gutils/tests/resources/slocum/sam-20190909T0000/rt/: config
gutils/tests/resources/slocum/unit_191-20210323T0000/config/: 2e0fc280.cac  d0793b85.cac  f6f0e43f.cac
gutils/tests/resources/slocum/unit_507_one/config/: 6ce3fe1f.cac  deployment.json
gutils/tests/resources/slocum/unit_507_two/config/: instruments.json
gutils/watch/: ascii.py  binary.py  netcdf.py
(+1550 files in other folders)
