[metadata]
name = gutils
version = attr: gutils.__version__
description = A set of Python utilities for reading, merging, and post processing Teledyne Webb Slocum Glider data
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License
license_file = LICENSE
author = Kyle Wilcox
author_email = kyle@axds.co
url = https://github.com/SECOORA/GUTILS
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: GIS
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Physics
    License :: OSI Approved :: MIT License

[options]
packages = find:
install_requires =
    cc-plugin-glider>=1.0.6,<2.0.0
    compliance-checker>=4.1.1
    gsw
    netCDF4
    numpy>=1.14,<1.19
    pandas<1.0
    pocean-core>=1.5.0,<2.0
    pyinotify
    scipy
    six
    whichcraft
tests_require =
    pytest
    pytest-flake8
python_requires = >=3.7,<4

[options.packages.find]
exclude = tests

[options.entry_points]
console_scripts=
    gutils_create_nc = gutils.nc:main_create
    gutils_check_nc = gutils.nc:main_check
    gutils_binary_to_ascii_watch = gutils.watch.binary:main_to_ascii
    gutils_ascii_to_netcdf_watch = gutils.watch.ascii:main_to_netcdf
    gutils_netcdf_to_ftp_watch = gutils.watch.netcdf:main_to_ftp
    gutils_netcdf_to_erddap_watch = gutils.watch.netcdf:main_to_erddap

[tool:pytest]
addopts = -s -rxs -v
markers =
    long: Tests that take a long time to run

[flake8]
max-line-length = 100
ignore = E265 E501 E221 E203 E201 E124 E202 E241 E251 W293 W291
exclude =
    docs/
    .git/
    __pycache__
    dist
    gutils/slocum/echotools/*.py

[tool:isort]
line_length=100
indent='    '
balanced_wrapping=1
multi_line_output=3
default_section=FIRSTPARTY
use_parentheses=1
reverse_relative=1
known_standard_library=simplejson
length_sort=1
combine_star=1
order_by_type=0
